<resources>
    <string name="help">Help</string>
    <string name="recode">Recode</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="api_key_label">API Key</string>
    <string name="url_label">URL</string>
    <string name="app_name">GMC Handheld</string> <!-- name of app -->
    <string name="build_date">Build Date\u0020</string>
    <string name="submit">Submit</string>
    <string name="to">To</string>
    <string name="item">Item:</string>
    <string name="add">Add</string>
    <string name="number_of_items_added">Number of items added:</string>
    <string name="history">History</string>
    <string name="barcode">Barcode:</string>
    <string name="name">Name:</string>
    <string name="remark">Remark:</string>
    <string name="lookup">Lookup</string>
    <string name="summary">Summary</string>
    <string name="move">Move</string>
    <string name="add_container">Add Container</string>
    <string name="configuration">Configuration</string>
    <string name="warning">Warning</string>
    <string name="old_barcode">Old Barcode:</string>
    <string name="new_barcode">New Barcode:</string>
    <string name="moveContent">Move Content</string>
    <string name="from">From:</string>
    <string name="hour">Hour (24 hr)</string>
    <string name="minute">Minute</string>
    <string name="audit">Audit</string>
    <string name="updating_app">Updating App</string>
    <string name="camera_as_scanner">Camera as Scanner</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="automatic_updates">Automatic Updates</string>
    <string name="_24">24</string>
    <string name="_0">0</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="child_text">child text</string>
    <string name="clear">Clear</string>
    <string name="double_tap_to_remove_item">Double tap to remove item</string>
    <string name="quality">Quality</string>
    <string name="photo">Photo</string>
    <string name="description">Description:</string>
    <string name="token">Token</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="needs_inventory">Needs Inventory</string>

    <string-array name="choice_items">
        <item>Needs Inventory</item>
        <item>Unsorted</item>
        <item>Radiation Risk</item>
        <item>Material Damaged</item>
        <item>Box Damaged</item>
        <item>Missing</item>
        <item>Needs Metadata</item>
        <item>Barcode Missing</item>
        <item>Label Obscured</item>
        <item>Insufficient Material</item>
    </string-array>

</resources>