<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/warning"
        android:icon="@drawable/ic_radiation_warning_symbol"
        app:showAsAction="always"/>

    <item
        android:id="@+id/lookup"
        android:title="@string/lookup"
        app:showAsAction="never" />
    <item
        android:id="@+id/summary"
        android:title="@string/summary"
        app:showAsAction="never" />
    <item
        android:id="@+id/move"
        android:title="@string/move"
        app:showAsAction="never" />

    <item
        android:id="@+id/audit"
        android:title="@string/audit"
        app:showAsAction="never" />

    <item
        android:id="@+id/moveContent"
        android:title="@string/moveContent"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_container"
        android:title="@string/add_container"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_inventory"
        android:title="@string/add_inventory"
        app:showAsAction="never" />

    <item
        android:id="@+id/quality"
        android:title="@string/quality"
        app:showAsAction="never" />

    <item
        android:id="@+id/recode"
        android:title="@string/recode"
        app:showAsAction="never" />

    <item
        android:id="@+id/photo"
        android:title="@string/photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/configuration"
        android:title="@string/configuration"
        app:showAsAction="never" />




</menu>


<!--<item-->
<!--android:id="@+id/notes"-->
<!--android:title="Notes"-->
<!--app:showAsAction="never" />-->

<!--<item-->
<!--android:id="@+id/audit"-->
<!--android:title="Audit"-->
<!--app:showAsAction="never" />-->

<!--<item android:id="@+id/radiation_warning"-->
<!--android:title="Warning"-->
<!--android:icon="@drawable/ic_radiation_warning_symbol"-->
<!--app:showAsAction="always"/>-->

<!--<item-->
<!--android:id="@+id/help"-->
<!--android:title="Help"-->
<!--app:showAsAction="never" />-->
<!--<item-->
<!--android:id="@+id/lookup"-->
<!--android:title="Lookup"-->
<!--app:showAsAction="never" />-->
<!--<item-->
<!--android:id="@+id/summary"-->
<!--android:title="Summary"-->
<!--app:showAsAction="never" />-->
<!--<item-->
<!--android:id="@+id/move"-->
<!--android:title="Move"-->
<!--app:showAsAction="never" />-->
<!--<item-->
<!--android:id="@+id/recode"-->
<!--android:title="Recode"-->
<!--app:showAsAction="never" />-->
<!--<item-->
<!--android:id="@+id/add_inventory"-->
<!--android:title="Add Inventory"-->
<!--app:showAsAction="never" />-->

<!--<item-->
<!--android:id="@+id/audit"-->
<!--android:title="Audit"-->
<!--app:showAsAction="never" />-->

<!--<item-->
<!--android:id="@+id/configuration"-->
<!--android:title="Configuration"-->
<!--app:showAsAction="never" />-->