<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_weight="1.75"/>

        <EditText
            android:id="@+id/remarkET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7.0"
            android:inputType="text"
            app:backgroundTint="@color/colorPrimary"
            android:selectAllOnFocus="true"/>

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.25"
            android:drawableBottom="@drawable/ic_scanner_qr"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_weight="1.75"/>

        <EditText
            android:id="@+id/itemET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:inputType="text"
            app:backgroundTint="@color/colorPrimary"
            android:selectAllOnFocus="true"/>

        <Button
            android:id="@+id/itemCameraBtn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.25"
            android:drawableBottom="@drawable/ic_scanner_qr"/>

        <Button
            android:id="@+id/addContainerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="44dip"
            android:minHeight="44dip"
            android:text="@string/add"
            android:textSize="10sp"
            android:layout_weight="1.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/number_of_items_added"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/auditCountTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:selectAllOnFocus="true"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/clearAllBtn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="40dip"
            android:minHeight="40dip"
            android:text="Clear"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="Double tap to remove item"
        android:textColor="#ff353535"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listViewGetContainersToAudit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:minWidth="40dip"
            android:minHeight="40dip"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/submit"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>