<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/from"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/fromET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.25"
            android:inputType="text"
            app:backgroundTint="@color/colorPrimary"
            android:selectAllOnFocus="true"
            android:nextFocusDown="@+id/fromET"
            android:nextFocusUp="@+id/fromET"
            android:nextFocusLeft="@+id/fromET"
            android:nextFocusRight="@+id/fromET" />

        <Button
            android:id="@+id/fromCameraBtn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.25"
            android:drawableBottom="@drawable/ic_scanner_qr"
            android:nextFocusDown="@+id/fromCameraBtn"
            android:nextFocusUp="@+id/fromCameraBtn"
            android:nextFocusLeft="@+id/fromCameraBtn"
            android:nextFocusRight="@+id/fromCameraBtn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/to"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/toET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.25"
            android:inputType="text"
            app:backgroundTint="@color/colorPrimary"
            android:selectAllOnFocus="true"
            android:nextFocusDown="@+id/toET"
            android:nextFocusUp="@+id/toET"
            android:nextFocusLeft="@+id/toET"
            android:nextFocusRight="@+id/toET" />

        <Button
            android:id="@+id/toCameraBtn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.25"
            android:drawableBottom="@drawable/ic_scanner_qr"
            android:nextFocusDown="@+id/toCameraBtn"
            android:nextFocusUp="@+id/toCameraBtn"
            android:nextFocusLeft="@+id/toCameraBtn"
            android:nextFocusRight="@+id/toCameraBtn" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:minWidth="40dip"
            android:minHeight="40dip"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/submit"
            android:textSize="12sp"
            android:textStyle="bold"
            android:nextFocusDown="@+id/submitBtn"
            android:nextFocusUp="@+id/submitBtn"
            android:nextFocusLeft="@+id/submitBtn"
            android:nextFocusRight="@+id/submitBtn"/>
    </RelativeLayout>
</LinearLayout>