<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".TakePhoto_Test">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/barcode"
                android:textColor="#ff353535"
                android:textStyle="bold"
                android:textSize="14sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/barcodeET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="6.25"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:text=""
                android:maxLength="25"
                android:selectAllOnFocus="true"
                android:nextFocusDown="@+id/barcodeET"
                android:nextFocusUp="@+id/barcodeET"
                android:nextFocusLeft="@+id/barcodeET"
                android:nextFocusRight="@+id/barcodeET"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/cameraBtn"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.25"
                android:drawableBottom="@drawable/ic_scanner_qr"
                android:nextFocusDown="@+id/cameraBtn"
                android:nextFocusUp="@+id/cameraBtn"
                android:nextFocusLeft="@+id/cameraBtn"
                android:nextFocusRight="@+id/cameraBtn"
                android:layout_marginEnd="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="6.00"
                android:inputType="text"
                android:nextFocusLeft="@+id/itemET"
                android:nextFocusRight="@+id/itemET"
                android:nextFocusUp="@+id/itemET"
                android:nextFocusDown="@+id/itemET"
                android:selectAllOnFocus="true"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageToUploadIv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="#000000"
                android:tag="thisImage" />

            <TextView
                android:id="@+id/imageViewTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="Touch to add image"
                android:textColor="@color/colorPrimary" />
        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listViewGetContainersToAudit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:minWidth="40dip"
            android:minHeight="40dip"
            android:nextFocusLeft="@+id/submitBtn"
            android:nextFocusRight="@+id/submitBtn"
            android:nextFocusUp="@+id/submitBtn"
            android:nextFocusDown="@+id/submitBtn"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/submit"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>